tests/errors/parser/invalid-width.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/invalid-width.futil
4 |    r.in = 0'd1;
  |           ^^^^ Parse error
Cannot represent given literal '1' in 0 bits
